src/main/java/com/ezasm/backend/parser/GDBMIParser.java
// Generated from C:/Code/EzASM/src/main/java/com/ezasm/backend\GDBMI.g4 by ANTLR 4.10.1
package com.ezasm.backend.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GDBMIParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		STRING=25, TOKEN=26;
	public static final int
		RULE_output = 0, RULE_result_record = 1, RULE_out_of_band_record = 2, 
		RULE_async_record = 3, RULE_exec_async_output = 4, RULE_status_async_output = 5, 
		RULE_notify_async_output = 6, RULE_async_output = 7, RULE_result_class = 8, 
		RULE_async_class = 9, RULE_result = 10, RULE_variable = 11, RULE_value = 12, 
		RULE_tuple = 13, RULE_list = 14, RULE_stream_record = 15, RULE_console_stream_output = 16, 
		RULE_target_stream_output = 17, RULE_log_stream_output = 18, RULE_nl = 19, 
		RULE_c_string = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"output", "result_record", "out_of_band_record", "async_record", "exec_async_output", 
			"status_async_output", "notify_async_output", "async_output", "result_class", 
			"async_class", "result", "variable", "value", "tuple", "list", "stream_record", 
			"console_stream_output", "target_stream_output", "log_stream_output", 
			"nl", "c_string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'(gdb)'", "'^'", "','", "'*'", "'+'", "'='", "'done'", "'running'", 
			"'connected'", "'error'", "'exit'", "'stopped'", "'{}'", "'{'", "'}'", 
			"'[]'", "'['", "']'", "'~'", "'@'", "'&'", "'\\n'", "'\\n\\r'", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "STRING", "TOKEN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GDBMI.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GDBMIParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class OutputContext extends ParserRuleContext {
		public NlContext nl() {
			return getRuleContext(NlContext.class,0);
		}
		public List<Out_of_band_recordContext> out_of_band_record() {
			return getRuleContexts(Out_of_band_recordContext.class);
		}
		public Out_of_band_recordContext out_of_band_record(int i) {
			return getRuleContext(Out_of_band_recordContext.class,i);
		}
		public Result_recordContext result_record() {
			return getRuleContext(Result_recordContext.class,0);
		}
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitOutput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitOutput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_output);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(42);
					out_of_band_record();
					}
					} 
				}
				setState(47);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1 || _la==TOKEN) {
				{
				setState(48);
				result_record();
				}
			}

			setState(51);
			match(T__0);
			setState(52);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Result_recordContext extends ParserRuleContext {
		public Result_classContext result_class() {
			return getRuleContext(Result_classContext.class,0);
		}
		public NlContext nl() {
			return getRuleContext(NlContext.class,0);
		}
		public TerminalNode TOKEN() { return getToken(GDBMIParser.TOKEN, 0); }
		public List<ResultContext> result() {
			return getRuleContexts(ResultContext.class);
		}
		public ResultContext result(int i) {
			return getRuleContext(ResultContext.class,i);
		}
		public Result_recordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_result_record; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterResult_record(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitResult_record(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitResult_record(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Result_recordContext result_record() throws RecognitionException {
		Result_recordContext _localctx = new Result_recordContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_result_record);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TOKEN) {
				{
				setState(54);
				match(TOKEN);
				}
			}

			setState(57);
			match(T__1);
			setState(58);
			result_class();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(59);
				match(T__2);
				setState(60);
				result();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Out_of_band_recordContext extends ParserRuleContext {
		public Async_recordContext async_record() {
			return getRuleContext(Async_recordContext.class,0);
		}
		public Stream_recordContext stream_record() {
			return getRuleContext(Stream_recordContext.class,0);
		}
		public Out_of_band_recordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_out_of_band_record; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterOut_of_band_record(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitOut_of_band_record(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitOut_of_band_record(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Out_of_band_recordContext out_of_band_record() throws RecognitionException {
		Out_of_band_recordContext _localctx = new Out_of_band_recordContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_out_of_band_record);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
			case T__4:
			case T__5:
			case TOKEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				async_record();
				}
				break;
			case T__18:
			case T__19:
			case T__20:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				stream_record();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Async_recordContext extends ParserRuleContext {
		public Exec_async_outputContext exec_async_output() {
			return getRuleContext(Exec_async_outputContext.class,0);
		}
		public Status_async_outputContext status_async_output() {
			return getRuleContext(Status_async_outputContext.class,0);
		}
		public Notify_async_outputContext notify_async_output() {
			return getRuleContext(Notify_async_outputContext.class,0);
		}
		public Async_recordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_async_record; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterAsync_record(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitAsync_record(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitAsync_record(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Async_recordContext async_record() throws RecognitionException {
		Async_recordContext _localctx = new Async_recordContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_async_record);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				exec_async_output();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				status_async_output();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				notify_async_output();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exec_async_outputContext extends ParserRuleContext {
		public Async_outputContext async_output() {
			return getRuleContext(Async_outputContext.class,0);
		}
		public NlContext nl() {
			return getRuleContext(NlContext.class,0);
		}
		public TerminalNode TOKEN() { return getToken(GDBMIParser.TOKEN, 0); }
		public Exec_async_outputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exec_async_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterExec_async_output(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitExec_async_output(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitExec_async_output(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Exec_async_outputContext exec_async_output() throws RecognitionException {
		Exec_async_outputContext _localctx = new Exec_async_outputContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_exec_async_output);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TOKEN) {
				{
				setState(77);
				match(TOKEN);
				}
			}

			setState(80);
			match(T__3);
			setState(81);
			async_output();
			setState(82);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Status_async_outputContext extends ParserRuleContext {
		public Async_outputContext async_output() {
			return getRuleContext(Async_outputContext.class,0);
		}
		public NlContext nl() {
			return getRuleContext(NlContext.class,0);
		}
		public TerminalNode TOKEN() { return getToken(GDBMIParser.TOKEN, 0); }
		public Status_async_outputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_status_async_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterStatus_async_output(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitStatus_async_output(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitStatus_async_output(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Status_async_outputContext status_async_output() throws RecognitionException {
		Status_async_outputContext _localctx = new Status_async_outputContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_status_async_output);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TOKEN) {
				{
				setState(84);
				match(TOKEN);
				}
			}

			setState(87);
			match(T__4);
			setState(88);
			async_output();
			setState(89);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Notify_async_outputContext extends ParserRuleContext {
		public Async_outputContext async_output() {
			return getRuleContext(Async_outputContext.class,0);
		}
		public NlContext nl() {
			return getRuleContext(NlContext.class,0);
		}
		public TerminalNode TOKEN() { return getToken(GDBMIParser.TOKEN, 0); }
		public Notify_async_outputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notify_async_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterNotify_async_output(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitNotify_async_output(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitNotify_async_output(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Notify_async_outputContext notify_async_output() throws RecognitionException {
		Notify_async_outputContext _localctx = new Notify_async_outputContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_notify_async_output);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TOKEN) {
				{
				setState(91);
				match(TOKEN);
				}
			}

			setState(94);
			match(T__5);
			setState(95);
			async_output();
			setState(96);
			nl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Async_outputContext extends ParserRuleContext {
		public Async_classContext async_class() {
			return getRuleContext(Async_classContext.class,0);
		}
		public List<ResultContext> result() {
			return getRuleContexts(ResultContext.class);
		}
		public ResultContext result(int i) {
			return getRuleContext(ResultContext.class,i);
		}
		public Async_outputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_async_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterAsync_output(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitAsync_output(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitAsync_output(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Async_outputContext async_output() throws RecognitionException {
		Async_outputContext _localctx = new Async_outputContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_async_output);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			async_class();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(99);
				match(T__2);
				setState(100);
				result();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Result_classContext extends ParserRuleContext {
		public Result_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_result_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterResult_class(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitResult_class(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitResult_class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Result_classContext result_class() throws RecognitionException {
		Result_classContext _localctx = new Result_classContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_result_class);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Async_classContext extends ParserRuleContext {
		public Async_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_async_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterAsync_class(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitAsync_class(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitAsync_class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Async_classContext async_class() throws RecognitionException {
		Async_classContext _localctx = new Async_classContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_async_class);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResultContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ResultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_result; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterResult(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitResult(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitResult(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResultContext result() throws RecognitionException {
		ResultContext _localctx = new ResultContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_result);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			variable();
			setState(111);
			match(T__5);
			setState(112);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(GDBMIParser.STRING, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public C_stringContext c_string() {
			return getRuleContext(C_stringContext.class,0);
		}
		public TupleContext tuple() {
			return getRuleContext(TupleContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_value);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__23:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				c_string();
				}
				break;
			case T__12:
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				tuple();
				}
				break;
			case T__15:
			case T__16:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TupleContext extends ParserRuleContext {
		public List<ResultContext> result() {
			return getRuleContexts(ResultContext.class);
		}
		public ResultContext result(int i) {
			return getRuleContext(ResultContext.class,i);
		}
		public TupleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tuple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterTuple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitTuple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitTuple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TupleContext tuple() throws RecognitionException {
		TupleContext _localctx = new TupleContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_tuple);
		int _la;
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(T__12);
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(T__13);
				setState(123);
				result();
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(124);
					match(T__2);
					setState(125);
					result();
					}
					}
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(131);
				match(T__14);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<ResultContext> result() {
			return getRuleContexts(ResultContext.class);
		}
		public ResultContext result(int i) {
			return getRuleContext(ResultContext.class,i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GDBMIListener ) ((GDBMIListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GDBMIVisitor ) return ((GDBMIVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_list);
		int _la;
		try {
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(T__15);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(T__16);
				setState(137);
				value();
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(138);
					match(T__2);
					setState(139);
					value();
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145);
				match(T__17);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				match(T__16);
				setState(148);
				result();
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(149);
					match(T__2);
					setState(150);
					result();
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(156);
				match(T__17);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
